# sfml_ecs

./: .gitignore  CMakeLists.txt  README.md  components.h  main.cpp  systems.cpp  systems.h  utilities.cpp  utilities.h  world.cpp  world.h
testGame/: main.cpp  systems.h  testGame-Info.plist  world.cpp  world.h
testGame.xcodeproj/: project.pbxproj
testGame.xcodeproj/xcuserdata/nancio.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
testGame.xcodeproj/xcuserdata/nancio.xcuserdatad/xcschemes/: testGame.xcscheme  xcschememanagement.plist
